Version 1.1.0
----------------------------------------------------------------
6 February 2008
+ Pagesmith works with new File Cabinet

15 January 2008
+ Changed pagesmith to work with xmlparser changes
+ Added url parser to passinfo script to allow images to work in some
  editors (i.e. fck)
+ Updated files: javascript/passinfo/head.js

Version 1.0.7
----------------------------------------------------------------
11 December 2007
+ PageSmith can be set to automatically create a link when a new page
  is created.
+ Changing a page title now updates the menu link.
+ Updated : templates/settings.tpl

Version 1.0.6
----------------------------------------------------------------
5 December 2007
+ Added open_window in case a cached page has a clickable image.

Version 1.0.5
-----------------------------------------------------------------
29 November 2007
+ Changed wording on move to front functionality
+ Added move to front to miniadmin

25 October 2007
+ Fixed text_only template. Missing closing </div>
+ Updated: templates/page_templates/text_only/page.tpl

Version 1.0.4
-----------------------------------------------------------------
18 October 2007
+ Fixed pagesmith edit permission.
+ PageSmith home pages were missing edit link.

Version 1.0.3
-----------------------------------------------------------------
10 October 2007
+ Added SmartTag to page display.
+ Fixed section listing to allow a single section template
+ Added an edit link to page views beside miniadmin
+ PageSmith gives a warning if you exceed the character limit.
+ Option for PageSmith to ignore the character limit.
+ Added text_only page template.
+ Updated: conf/config.php
+ Copy: templates/page_templates/text_only/

Version 1.0.2
-----------------------------------------------------------------
17 September 2007
+ New icon
+ Fixed page title not appearing on form.
+ Fixed inability to edit a text area more than once.

12 September 2007
+ Pages pinned to front no longer flag their key.
