@@ -1,0 +1,21 @@
+<div id="threesec-page">
+   <h1 id="threesec-page-title">{page_title}</h1>
+   <div class="section">
+      <div class="content">
+      <!-- BEGIN image1 --><div id="threesec-image1">{image1}</div><!-- BEGIN image1 -->
+      {text1_edit}<div id="threesec-text1">{text1}</div>
+      </div>
+   </div>
+   <div class="section">
+      <div class="content">
+      <!-- BEGIN image2 --><div id="threesec-image2">{image2}</div><!-- BEGIN image2 -->
+      {text2_edit}<div id="threesec-text2">{text2}</div>
+      </div>
+   </div>
+   <div class="section">
+      <div class="content">
+      <!-- BEGIN image3 --><div id="threesec-image3">{image3}</div><!-- BEGIN image3 -->
+      {text3_edit}<div id="threesec-text3">{text3}</div>
+      </div>
+   </div>
+</div>
